crates/pvm-contract-macros/tests/ui/derive_too_many_slots_with_dynamic.stderr
error[E0080]: evaluation panicked: `#[derive(SolStorage)]` on `TooManySlotsWithDynamic`: a storage struct cannot exceed 8 storage slots (MAX_STATIC_SLOTS). Reduce the field count.
  --> tests/ui/derive_too_many_slots_with_dynamic.rs:21:19
   |
21 | #[derive(SolType, SolStorage)]
   |                   ^^^^^^^^^^ evaluation of `_` failed here
